--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-collapsible": "^1.6.1",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
